# nes-emulator

./: .gitignore  .gitmodules  Cargo.toml  Cargo.toml.skip  Makefile  README.md  build.rs  index.html
assets/: emulator.html  index.html  sw.js
crates/: README.md
crates/nes-app/: Cargo.toml
crates/nes-app/src/: app.rs  command.rs  controller.rs  display.rs  event.rs  input.rs  lib.rs  main.rs  snapshot.rs
crates/nes-app/src/app/: action.rs  app.rs  event.rs  mod.rs
crates/nes-app/src/app/ui/: app_input.rs  error.rs  file_drop_overlay.rs  main_view.rs  mod.rs  post_fx.rs  waiting_view.rs
crates/nes-app/src/app/ui/shaders/: mod.rs  nes_crt.frag.glsl  nes_crt.vert.glsl  nes_crt_webgl.frag.glsl  nes_crt_webgl.vert.glsl  test_shader.frag.glsl  test_shader.glsl
crates/nes-app/src/app/ui/views/: error_view.rs  mod.rs  playing_view.rs  rom_select_view.rs  waiting_view.rs
crates/nes-app/src/audio/: callback.rs  config.rs  driver.rs  mod.rs
crates/nes-app/src/display/: color_map.rs  consts.rs  mod.rs  shared_frame.rs
crates/nes-app/src/emu/: commands.rs  emu_input.rs  events.rs  host.rs  mod.rs  runtime.rs
crates/nes-app/src/shared/: frame_buffer.rs
crates/nes-core/: Cargo.toml
crates/nes-core/src/: lib.rs  nes.rs  prelude.rs
crates/nes-core/src/nes/: apu.rs  bus.rs  cartridge.rs  cpu.rs  dmc_dma.rs  oam_dma.rs  ppu.rs  test_utils.rs  tracer.rs
crates/nes-core/src/nes/apu/: blip_buf.rs  dmc_channel.rs  filter.rs  noise_channel.rs  output.rs  pulse_channel.rs  status_register.rs  triangle_channel.rs
crates/nes-core/src/nes/apu/units/: dmc_output.rs  envelope.rs  length_counter.rs  sequence_timer.rs  sweep.rs
crates/nes-core/src/nes/bus/: consts.rs  mod.rs  nes_bus.rs  nes_bus_test.rs  simple_bus.rs
crates/nes-core/src/nes/cartridge/: mapper000_nrom.rs  mapper001_mmc1.rs  mapper002_ux_rom.rs  mapper003_cn_rom.rs  mapper004_mmc3.rs  rom.rs
crates/nes-core/src/nes/controller/: joypad.rs
crates/nes-core/src/nes/cpu/: instruction_handlers.rs  interrupts.rs  opcodes.rs  processor.rs  processor_tests.rs
crates/nes-core/src/nes/ppu/: background.rs  consts.rs  mod.rs  mod_tests.rs  nmi.rs  registers.rs  scheduler.rs  sprites.rs
crates/nes-core/src/nes/ppu/registers/: decay_register.rs  scroll_register.rs  status_register.rs
crates/nes-core/src/nes/tracer/: macros.rs
crates/nes-native/: Cargo.toml
crates/nes-native/src/: main.rs
crates/nes-romtest/: Cargo.toml
crates/nes-romtest/src/: main.rs
crates/nes-step/: Cargo.toml
crates/nes-step/src/: main.rs
crates/nes-wasm/: Cargo.toml  Trunk.toml  emulator.html  index.html
crates/nes-wasm/assets-orig/: emulator.html  index.html
crates/nes-wasm/src/: bootstrap.rs  lib.rs  main.rs  message.rs  messenger.rs
imgs/: nes-emulator.excalidraw
scripts/: run_romtests.py
src/: app.rs  app_native.rs  app_wasm.rs  bus.rs  bus_tests.rs  consts.rs  cpu.rs  cpu_tests.rs  display.rs  error.rs  main.rs  nes.rs  opcodes.rs  rom.rs  test_runner.rs
src/apu/: dmc_channel.rs  mod.rs  noise_channel.rs  pulse_channel.rs  registers.rs  square_wave.rs  triangle_channel.rs
src/apu/units/: envelope.rs  length_counter.rs  mod.rs  sequence_timer.rs  sweep.rs
src/bus/: bus_tests.rs  mod.rs  mod_tests.rs  nes_bus.rs  nes_bus_test.rs  simple_bus.rs
src/cartridge/: mapper000_nrom.rs  mapper002_ux_rom.rs  mapper003_cn_rom.rs  mmc1.rs  mod.rs  nrom.rs
src/controller/: joypad.rs
src/cpu/: interrupts.rs  mod.rs  opcodes.rs  processor.rs  processor_tests.rs  trace.rs
src/display/: color_map.rs  consts.rs  frame.rs  mod.rs  render.rs  shared_frame.rs
src/memory/: heap_memory.rs  memory_trait.rs  mod.rs  stack_memory.rs
src/nes/: mod.rs
src/nes/apu/: dmc_channel.rs  mod.rs  noise_channel.rs  pulse_channel.rs  triangle_channel.rs
src/nes/apu/units/: dmc_output.rs  envelope.rs  length_counter.rs  sequence_timer.rs
src/nes/bus/: mod.rs  nes_bus.rs  nes_bus_test.rs  simple_bus.rs
src/nes/cartridge/: mapper000_nrom.rs  mapper001_mmc1.rs  mapper002_ux_rom.rs  mapper003_cn_rom.rs  mmc1.rs  mod.rs  rom.rs
src/nes/controller/: joypad.rs  mod.rs
src/nes/cpu/: instruction_handlers.rs  interrupts.rs  mod.rs  opcodes.rs  processor.rs  processor_tests.rs  trace.rs
src/nes/ppu/: background.rs  mod.rs  mod_tests.rs  scheduler.rs  sprites.rs
src/nes/ppu/registers/: control_register.rs  decay_register.rs  mask_register.rs  scroll_register.rs  status_register.rs
src/nes/tracer/: mod.rs  traceable.rs
src/ppu/: address_register.rs  background.rs  control_register.rs  mask_register.rs  mod.rs  mod_tests.rs  scroll_register.rs  sprites.rs  status_register.rs
src/ppu/registers/: control_register.rs  decay_register.rs  mask_register.rs  mod.rs  scroll_register.rs  status_register.rs
tests/: frame_basics.rs
