[package]
name = "nes-emulator"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
async-std = {version = "1.13.1", features = ["attributes"]}
bitflags = "2.9.0"
once_cell = "1.21.1"
rand = "0.9.0"
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
#sdl2-sys = "*"
# Let build.rs handle linking. Enable only the higher-level modules we use.
sdl2 = {  version = "0.37.0", features = ["ttf", "image"] }
crossbeam-channel = "0.5.14"

[features]
#default = ["tracing"]
tracing = []

#[[bin]]
#name = "test-runner"
#path = "src/test_runner.rs"

[build-dependencies]
cc = "1"
cmake = "0.1"
pkg-config = "0.3"