[package]
name = "nes-emulator"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
bitflags = "2.9.0"
once_cell = "1.21.1"

sdl3 = { version = "0.15.1", features = ["build-from-source-static", "ttf"] }

[features]
#default = ["tracing"]
tracing = []

#[[bin]]
#name = "test-runner"
#path = "src/test_runner.rs"
