[package]
name = "nes-emulator"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = "0.4.14"
bitflags = "2.9.0"
once_cell = "1.21.1"
tinyaudio = "1.1.0"
thiserror = "2.0.17"

[features]
#default = ["tracing"]
default = ["logging"]
tracing = []
logging = []


# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"

#[[bin]]
#name = "test-runner"
#path = "src/test_runner.rs"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.104"
wasm-bindgen-futures = "0.4.54"
web-sys = { version = "0.3", features = [
    "Window",
    "Request",
    "RequestInit",
    "Response",
    "Headers",
    "RequestMode",
    "console"
] }
anyhow = "1.0.100"
js-sys = "0.3.81"



[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
