[package]
name = "nes-app"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

# Feature forwarding for nes-core
[features]
runtime-ppu-schedule = ["nes-core/runtime-ppu-schedule"]
linear-apu-approximation = ["nes-core/linear-apu-approximation"]
tracing = ["nes-core/tracing"]

[dependencies]
nes-core = { path = "../nes-core", default-features = false }
egui = "0.33.3"
eframe = { version = "0.33.3", default-features = false, features = [
    "default_fonts",
    "glow",
    "web_screen_reader",
] }
cpal = { version = "0.17.1", features = ["wasm-bindgen"] }
crossbeam-channel = "0.5.15"
anyhow = "1.0.100"
bytemuck = "1.24.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.17.2"  # file picker for native

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "AudioContext",
    "MessageEvent"
] }