[package]
name = "nes-native"
version = "0.1.0"
edition = "2024"

[dependencies]
nes-app = { path = "../nes-app", default-features = false, features = ["runtime-ppu-schedule"] }
egui = "0.33.3"
eframe = { version = "0.33.3", default-features = false, features = [
    "default_fonts",
    "glow",
] }
