[package]
name = "nes-wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
nes-app = { path = "../nes-app" }
macroquad = "0.4"
wasm-bindgen = "0.2.104"
wasm-bindgen-futures = "0.4.54"
web-sys = { version = "0.3", features = [
    "Window",
    "Request",
    "RequestInit",
    "Response",
    "Headers",
    "RequestMode",
    "console"
] }
anyhow = "1.0.100"
js-sys = "0.3.81"