[package]
name = "nes-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
nes-app = { path = "../nes-app", features = [
    "linear-apu-approximation", # Approximate APU sample values
    "runtime-ppu-schedule" # Faster compiles / smaller WASM bundle
] }
eframe = { version = "0.33.3", default-features = false, features = [
    "default_fonts",
    "glow",
] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "AudioContext", "MessageEvent", "Window"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"